crates/ffi/bindings/csharp/PureStudyNative.g.cs


        /// <summary>
        ///  Set (or clear, with a null `note`) the note on entry `index` of the thread
        ///  named `name`. Null on success, else an owned error.
        ///
        ///  # Safety
        ///  `engine` is valid; the string args are null or valid NUL-terminated UTF-8.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_thread_entry_set_note", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_thread_entry_set_note(PureEngine* engine, byte* name, uint index, byte* note);

        /// <summary>
        ///  Replace the notes document of the weave named `name` (marks it hand-written).
        ///  Null on success, else an owned error. The weave must already exist.
        ///
        ///  # Safety
        ///  `engine` is valid; the string args are null or valid NUL-terminated UTF-8.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_weave_set_notes", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_weave_set_notes(PureEngine* engine, byte* name, byte* notes);

        /// <summary>
        ///  A verse's 1769 translators' margin notes as JSON, or null when the verse
        ///  has none (or the engine was opened from bytes).
        ///
        ///  # Safety
        ///  `engine` is a live engine; `ref_key` is null or valid NUL-terminated UTF-8.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_verse_notes_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_verse_notes_json(PureEngine* engine, byte* ref_key);

        /// <summary>
        ///  The verse's TSK study cross-references (best-voted first) as JSON, or null
        ///  when the verse has none or the TSK artifact is absent.
        ///
        ///  # Safety
        ///  `engine` is a live engine; `ref_key` is null or valid NUL-terminated UTF-8.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_study_xrefs_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_study_xrefs_json(PureEngine* engine, byte* ref_key);

        /// <summary>
        ///  The full weave library (canonical + suggested) with every link field a
        ///  shell needs for connectors, compare cards, the chord map and the
        ///  constellation. Never null on a live engine (empty library → empty list).
        ///
        ///  # Safety
        ///  `engine` is a live engine (or null → null).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_weaves_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_weaves_json(PureEngine* engine);

        /// <summary>
        ///  Every weave link as a deduped canonical verse pair, each endpoint located
        ///  (ref key + book/chapter/verse) and flagged `resolved` when both ends are in
        ///  the corpus. The one derivation behind the ambient connector lines and the
        ///  chord map, so a shell neither dedupes nor parses ref keys itself. Never null
        ///  on a live engine (empty library → empty list).
        ///
        ///  # Safety
        ///  `engine` is a live engine (or null → null).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_link_pairs_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_link_pairs_json(PureEngine* engine);

        /// <summary>
        ///  The canon overview segmentation: the 8 sections as `(label, first, last)`
        ///  book indices over the 66 books, plus the OT/NT divide (39). Static data
        ///  frozen in `core::reference` — served here so a non-Rust shell consumes the
        ///  one source instead of re-hardcoding the bands. Never null on a live engine.
        ///
        ///  # Safety
        ///  `engine` is a live engine (or null → null); the payload does not depend on
        ///  engine state, but the arg keeps the call shape uniform.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_canon_segments_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_canon_segments_json(PureEngine* engine);

        /// <summary>
        ///  The book-to-book weave chord map: canon-ordered book-pair counts over the
        ///  deduped link pairs (`{pairs:[{a,b,count}], max, otNtDivide, bookCount}`),
        ///  where `a`/`b` are book indices (`a &lt;= b`). The one fold behind the "Weave
        ///  map" popup, so a shell lays out ribbons without folding pairs or deriving the
        ///  max. Never null on a live engine (empty library → empty pairs, max 1).
        ///
        ///  # Safety
        ///  `engine` is a live engine (or null → null).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_chord_map_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_chord_map_json(PureEngine* engine);

        /// <summary>
        ///  One laid-out page of the constellation (the weave-library overview popup):
        ///  lanes with nodes + edges as **fractions**, plus the pin/paging state already
        ///  resolved into a caption. The shell holds the transient `page` and `pins`
        ///  (weave indices, the same handles the lanes carry) and passes them in;
        ///  everything derived — usable filter, largest-first order, per-verse degree,
        ///  jitter, lane assignment, paging — lives here. `pins_json` is a JSON array of
        ///  weave indices (e.g. `"[3,7]"`); null / empty / malformed means no pins.
        ///  Never null on a live engine.
        ///
        ///  # Safety
        ///  `engine` is a live engine (or null → null); `pins_json` is null or valid
        ///  NUL-terminated UTF-8.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_constellation_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_constellation_json(PureEngine* engine, uint page, byte* pins_json);

        /// <summary>
        ///  The symbolic concept engine's view of a Strong's code: occurrence total,
        ///  testament split, concentrating books, per-book dispersion counts,
        ///  collocates, co-occurrence community, and the leitwort discovery when one
        ///  exists. Null when the code never occurs. Built lazily on first call
        ///  (corpus-wide sweep, ~seconds) and cached.
        ///
        ///  # Safety
        ///  `engine` is a live engine; `code` is null or valid NUL-terminated UTF-8.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_concept_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_concept_json(PureEngine* engine, byte* code);

        /// <summary>
        ///  The concept map for a code: the radial neighbourhood (embedding neighbours ∪
        ///  collocation community, deduped, labels pre-baked) plus the per-book
        ///  dispersion counts in canon order. One call replaces the shell's spoke
        ///  assembly and its four separate lookups (neighbours / concept / gloss /
        ///  lemma). Never null on a live engine + valid code — a code with no stats
        ///  still yields its centre label and any embedding spokes (empty dispersion).
        ///
        ///  # Safety
        ///  `engine` is a live engine; `code` is null or valid NUL-terminated UTF-8.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_concept_map_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_concept_map_json(PureEngine* engine, byte* code);

        /// <summary>
        ///  A short English gloss for a Strong's code — the modal KJV rendering across
        ///  its occurrences (≤80 sampled), falling back to a distilled dictionary
        ///  clause. Plain text (not JSON); null when nothing sensible exists.
        ///
        ///  # Safety
        ///  `engine` is a live engine; `code` is null or valid NUL-terminated UTF-8.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_gloss", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_gloss(PureEngine* engine, byte* code);

        /// <summary>
        ///  A panel view as the typed block list (`{blocks:[…]}`). Word study: the clicked
        ///  word's dictionary + Full-study tiers + this verse's cross-references/notes.
        ///  `full` gates the R&amp;D tiers + author actions. Never null on a live engine.
        ///
        ///  # Safety
        ///  `engine` is a live engine; `ref_key` is null or valid NUL-terminated UTF-8.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_word_study_blocks_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_word_study_blocks_json(PureEngine* engine, byte* ref_key, uint token_index, [MarshalAs(UnmanagedType.U1)] bool full);

        /// <summary>
        ///  The standalone `code:CODE[:word]` study card (the reverse rendering-lens
        ///  target). `word` may be null. Never null on a live engine.
        ///
        ///  # Safety
        ///  `engine` is a live engine; the string args are null or valid NUL-terminated UTF-8.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_code_study_blocks_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_code_study_blocks_json(PureEngine* engine, byte* code, byte* word, [MarshalAs(UnmanagedType.U1)] bool full);

        /// <summary>
        ///  The full concordance for a code as blocks. Never null on a live engine.
        ///
        ///  # Safety
        ///  `engine` is a live engine; `code` is null or valid NUL-terminated UTF-8.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_concordance_blocks_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_concordance_blocks_json(PureEngine* engine, byte* code);

        /// <summary>
        ///  The concordance filtered to one rendering of a code, as blocks. Never null
        ///  on a live engine.
        ///
        ///  # Safety
        ///  `engine` is a live engine; the string args are null or valid NUL-terminated UTF-8.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_rendering_concordance_blocks_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_rendering_concordance_blocks_json(PureEngine* engine, byte* code, byte* rendering);

        /// <summary>
        ///  The threads list as blocks. Never null on a live engine.
        ///
        ///  # Safety
        ///  `engine` is a live engine (or null → null).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_threads_blocks_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_threads_blocks_json(PureEngine* engine);
